<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/record_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rlCategorySearch">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/llTransactionDetails"
                style="@style/card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <Button
                    android:id="@+id/etAmount"
                    style="@android:style/Widget.Holo.Light.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:focusable="false"
                    android:gravity="right"
                    android:hint="@string/amount"
                    android:singleLine="true"
                    android:textSize="32sp" />

                <RadioGroup
                    android:id="@+id/rgType"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/touchables_min_length"
                    android:layout_below="@+id/etAmount"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/touchables_min_length"
                        android:layout_weight="1"
                        android:text="@string/expense" />

                    <RadioButton
                        android:id="@+id/rbIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/touchables_min_length"
                        android:layout_weight="1"
                        android:text="@string/income" />
                </RadioGroup>


                <Button
                    android:id="@+id/btDatePicker"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/touchables_min_length"
                    android:layout_below="@+id/rgType"
                    android:text="@string/date_picker_placeholder" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/touchables_min_length"
                    android:layout_below="@id/btDatePicker"
                    android:capitalize="sentences"
                    android:hint="@string/description" />


            </RelativeLayout>

            <com.linearlistview.LinearListView
                android:id="@+id/llvCategoryPicker"
                style="@style/card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:divider="@color/default_divider_color_light"
                android:minHeight="@dimen/touchables_min_length"
                android:orientation="vertical"
                android:padding="@dimen/card_padding"
                android:showDividers="middle"
                app:dividerThickness="@dimen/divider_thickness" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlCategorySearch"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touchables_min_length"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/etCategorySearch"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/touchables_min_length"
            android:background="@drawable/element_float"
            android:capitalize="words"
            android:hint="@string/choose_category"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/touchables_min_length"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/ibCategoryAdd"
            android:layout_width="@dimen/touchables_min_length"
            android:layout_height="fill_parent"
            android:layout_alignRight="@+id/etCategorySearch"
            android:layout_centerVertical="true"
            android:background="@drawable/button_highlight"
            android:contentDescription="@string/add"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_send_now" />

    </RelativeLayout>


</RelativeLayout>
